installer/resources/themes/susidns/light/susidns.css
/* ... */
#content h3 {
    border: 1px solid #7e7fb9;
    padding: 5px 8px 5px 34px;
    border-radius: 2px;
    background: url(/themes/console/images/info/question.png) 8px center no-repeat, linear-gradient(to bottom, #fcfcff 50%, rgba(255,255,255,0.6) 50%, rgba(240,240,255,0.4)), linear-gradient(135deg, #fcfcff 5%, rgba(231, 231, 255, 0.8) 15%) !important;
    background-size: 20px 20px, 100% 100%, 100% 100% !important;
    background-blend-mode: luminosity, normal, normal;
    box-shadow: inset 0 0 0 1px #fff, 0 0 1px #ccc;
    text-transform: none;
    letter-spacing: 0;
}

.iframed #content h3 {
    margin-top: 3px;
}

#content p {
    margin-left: 15px;
    margin-right: 15px;
    line-height: 130%;
}

#add, div#import {
    margin-top: 4px;
    padding: 0 15px;
    border: 1px solid #7e7fb9;
    background: #fafaff;
}

#add {
    margin-top: -11px;
}

.iframed #add {
    margin: 12px 0 10px;
}

.iframed #import {
    margin: 0;
}

#add h3, #import h3 {
    margin: 0 -15px;
    padding: 5px 10px;
    border-bottom: 1px solid #7e7fb9;
}

#add table, #import table {
    width: 100%;
    margin: 5px 0;
}

#add table td:first-child,
#import table td:first-child {
    width: 100px;
    white-space: nowrap;
    text-align: right;
}

#add td, #import td {
    padding: 3px;
}

#add input[type="text"], #import input[type="file"] {
    width: 100%;
}

input::placeholder {
    font-style: italic;
}

input:focus::placeholder {
    opacity: 0;
}

div#add p.buttons, div#import p.buttons {
    border: 1px solid #7e7fb9;
    margin: 0 -16px -6px;
    background: linear-gradient(to bottom, #fff 50%, rgba(220,220,255,0.3)), repeating-linear-gradient(135deg, rgba(255,255,255,0.5) 2px, rgba(221, 221, 255, 0.3) 3px, #fff 5px), #fff !important;
}

.iframed #add p.buttons {
    margin-bottom: 0;
    border-bottom: none;
}

div.help {
    border: 1px solid #7e7fb9;
    padding: 0 15px;
    background: #eef;
    background: linear-gradient(135deg, #fafaff, #f8f8ff);
    margin: -11px 0 0;
}

.iframed div.help {
    border-radius: 0 0 2px 2px;
}

.help#helpsubs {
    background: #eef url(/themes/console/images/info/infohelp.png) 10px center no-repeat;
    background: url(/themes/console/images/info/infohelp.png) 10px center no-repeat, linear-gradient(135deg, #fafaff, #f8f8ff);
    padding: 0 15px 0 45px;
    font-size: 10pt;
}

div.help h3, #add h3, #import h3 {
    margin: -1px -16px 0 !important;
    padding: 5px 10px;
    border: 1px solid #7e7fb9;
    background: #fcfcff;
    background: linear-gradient(to bottom, #fcfcff 50%, rgba(255,255,255,0.6) 50%, rgba(240,240,255,0.4)), linear-gradient(135deg, #fcfcff 5%, rgba(231, 231, 255, 0.8) 15%);
}

/*.iframed div.help h3, .iframed #add h3, .iframed #import h3 {
    margin: -1px -22px 0 !important;
}*/

p#help {
    margin: 0;
    padding: 0;
}

p, #helpconfig {
    font-size: 9pt;
    text-align: justify;
}

.iframed #helpconfig, .iframed #helpsubs {
    margin-top: 10px;
    margin-bottom: 12px;
    box-shadow: inset 0 0 0 1px #fff;
    border-radius: 0;
}

#helpconfig ul {
    -moz-columns: 2 400px;
    -webkit-columns: 2 400px;
    columns: 2 400px;
    -moz-column-gap: 50px;
    -webkit-column-gap: 50px;
    column-gap: 50px;
}

#helpconfig ul li {
    break-inside: avoid;
    page-break-inside: avoid;
    -webkit-break-inside: avoid;
}

span.addrhlpr {
    font-size: 9pt;
}

a, button, input[type="submit"], input[type="cancel"], select, h3 {
    text-shadow: 0 1px 1px #fff;
}

a:hover, a:focus, a:active, select:hover, select:focus, select:active, input:hover, input:focus, input:active, button:hover, button:focus, button:active {
    text-shadow: none;
}

h3 {
    font-size: 11pt;
    letter-spacing: 0.08em;
    font-weight: bold;
    text-transform: uppercase;
    margin-bottom: 0;
}

a {
    color: #3b6bbf;
    text-decoration:none;
    font-weight: bold;
    outline: none;
}

a:visited {
    color: #2c4e8f;
}

a:hover, a:focus {
    text-decoration: none;
    color: #f60;
}

a:active {
    color: #f30;
}

th {
    padding:5px 10px;
    font-size: 10pt;
}

td {
    padding: 5px 10px;
    font-size: 9pt;
    vertical-align: middle;
}

ol, ul {
    margin-left: -30px;
}

li {
    font-size: 9pt;
    list-style: square;
    line-height: 140%;
}

#host_list tr:nth-child(odd), #host_details tr:nth-child(odd) {
    background-color: #f7f8ff;
    background: repeating-linear-gradient(45deg, rgba(255,255,255,0.5) 2px, rgba(192, 192, 255, 0.3) 3px, #fff 5px), #fff;
}

#host_list tr:nth-child(even), #host_details tr:nth-child(even) {
    background-color: #eef;
    background: repeating-linear-gradient(135deg, rgba(255,255,255,0.5) 2px, rgba(240, 240, 255, 0.3) 3px, #fff 5px), #fff;
}

_:-ms-lang(x), #host_list td, #host_list tr:hover td, #host_details td, #host_details tr:hover td {
    box-shadow: none !important;
}

#host_list td, #host_details td {
    box-shadow: inset 0 0 0 1px #fff;
}

#host_list tr:hover td, #host_details tr:hover td {
    color: #33333f;
    box-shadow: inset 0 0 0 1px #ffe;
}

#host_list td:nth-last-child(n+4), #host_details td:nth-last-child(n+4), #host_details td:first-child {
    border-right: 1px solid #ddf;
}

div#messages {
    margin: 0 3%;
    padding: 5px 20px;
    top: 0;
    left: 0;
    right: 0;
    position: fixed;
    z-index: 999;
    line-height: 150%;
    text-align: center;
    opacity: 0.9;
    border-radius: 0 0 4px 4px;
    box-shadow: 0 1px 2px rgba(100,100,200,0.7);
    background: url(/themes/snark/light/images/delete.png) right 8px top 5px no-repeat #113;
    background-size: 16px 16px !important;
    cursor: crosshair;
    animation: 2s hide-up 10s ease-out forwards;
}

div#messages:hover {
    background: url(/themes/snark/light/images/delete_hover.png) right 8px top 5px no-repeat #113;
}

.iframed div#messages {
    border: none;
}

div#messages:empty {
    display: none;
}

#messages p {
    font-size: 9pt;
    letter-spacing: 2px;
    color: #ff9;
    text-shadow: 0 1px 1px #000;
}
/* ... */

